test/should-fail/检查类型-3.j
function bad takes undef u1 returns nothing
endfunction
